--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Fresh Juice</title>
 </head>
 
 <body>
+
+
+
+
+	<footer>
+		<div class="container">
+			<section class="footer_inner">
+				<p><a href='https://ru.freepik.com/psd/template'>Template PSD создан(а) freepik - ru.freepik.com</a></p>
+				<p>Сверстан мной))</p>
+			</section>
+		</div>
+	</footer>
 
 </body>
 
