--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="fresh-juice/css/style.css">
 	<title>Fresh Juice</title>
 </head>
 
@@ -15,11 +14,13 @@
 
 
 
-	<footer>
+	<footer class="footer section">
 		<div class="container">
 			<section class="footer_inner">
-				<p><a href='https://ru.freepik.com/psd/template'>Template PSD создан(а) freepik - ru.freepik.com</a></p>
-				<p>Сверстан мной))</p>
+				<p class="footer_inner__text"><a target="_blank" href='https://ru.freepik.com/psd/template'>Template PSD
+						создан(а) freepik -
+						ru.freepik.com</a></p>
+				<p class="footer_inner__text">Сверстан мной))</p>
 			</section>
 		</div>
 	</footer>
