--- a/index.html
+++ b/index.html
@@ -12,16 +12,35 @@
 
 <body>
 
+	<header class="header section">
+		<div class="container">
+			<section class="header__inner">
+				<div class="header__top">
+					<div class="header__logo header__item">
+						<img src="img/logo.png" alt="logo">
+					</div>
+					<div class="header__title header__item">
+						<p class="header__title--top">Special</p>
+						<p class="header__title--bottom">discounts</p>
+					</div>
+					<div class="header__link header__item">
+						<a href="#">www.yourwebsite.com</a>
+					</div>
+				</div>
+			</section>
+		</div>
+	</header>
 
 
 
 	<footer class="footer section">
 		<div class="container">
-			<section class="footer_inner">
-				<p class="footer_inner__text"><a target="_blank" href='https://ru.freepik.com/psd/template'>Template PSD
+			<section class="footer__inner">
+				<p class="footer__inner__text"><a target="_blank"
+						href='https://ru.freepik.com/free-psd/juice-bottle-social-media-posts_12552071.htm'>Template PSD
 						создан(а) freepik -
 						ru.freepik.com</a></p>
-				<p class="footer_inner__text">Сверстан мной))</p>
+				<p class="footer__inner__text">Сверстан <a target="_blank" href="https://github.com/HunterM7">мной</a>))</p>
 			</section>
 		</div>
 	</footer>
